[package]
name = "raytracer"
version = "0.1.0"
authors = ["Riccardo Attilio Galli <riccardo@sideralis.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.15.3"
ndarray = "0.13.0"
png = "0.16.0"
rand = "0.7.3"
rayon = "1.3.0"
structopt = "0.3.11"
